--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
+    "path": "^0.12.7",
     "pg": "^8.16.3",
     "tsc-alias": "^1.8.16"
   }
