--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/method-override": "^3.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.10",
+    "method-override": "^3.0.0",
     "multer": "^2.0.2",
     "path": "^0.12.7",
     "pg": "^8.16.3",
