--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "populate": "dotenv -e .env -- node dist/db/populatedb.js"
@@ -40,10 +40,12 @@
   },
   "dependencies": {
     "ejs": "^3.1.10",
+    "express-validator": "^7.2.1",
     "method-override": "^3.0.0",
     "multer": "^2.0.2",
     "path": "^0.12.7",
     "pg": "^8.16.3",
-    "tsc-alias": "^1.8.16"
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0"
   }
 }
