--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "populate": "dotenv -e .env -- node dist/db/populatedb.js"
+    "populate-local": "dotenv -e .env -- node dist/db/populatedb.js local",
+    "populate-prod": "dotenv -e .env -- node dist/db/populatedb.js production"
   },
   "repository": {
     "type": "git",
