--- a/package.json
+++ b/package.json
@@ -22,30 +22,30 @@
   },
   "homepage": "https://github.com/monajstha/TrackGrocery#readme",
   "description": "",
-  "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/method-override": "^3.0.0",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.3.0",
-    "@types/pg": "^8.15.5",
-    "dotenv": "^17.2.1",
-    "eslint": "^9.34.0",
-    "express": "^5.1.0",
-    "install": "^0.13.0",
-    "nodemon": "^3.1.10",
-    "npm": "^11.5.2",
-    "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
-  },
   "dependencies": {
     "ejs": "^3.1.10",
+    "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "method-override": "^3.0.0",
     "multer": "^2.0.2",
     "path": "^0.12.7",
     "pg": "^8.16.3",
     "tsc-alias": "^1.8.16",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "@types/express": "^5.0.3",
+    "@types/method-override": "^3.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
+    "dotenv": "^17.2.1",
+    "typescript": "^5.9.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.34.0",
+    "install": "^0.13.0",
+    "nodemon": "^3.1.10",
+    "npm": "^11.5.2",
+    "prettier": "^3.6.2"
   }
 }
